Fix overlapping barcharts by setting z-index

--- a/code/src/style.css
+++ b/code/src/style.css
@@ -87,5 +87,18 @@ rect:hover {
 }
 
 #alarmTypeBarChart, #mostActiveBrigadesBarChart, #averageCallDurationBarChart {
+    position: relative;
     margin-left: -152px;
+}
+
+#alarmTypeBarChart {
+    z-index: 3;
+}
+
+#mostActiveBrigadesBarChart {
+    z-index: 2;
+}
+
+#mostActiveBrigadesBarChart {
+    z-index: 1;
 }
